fixed horizontal scrollbar

--- a/resources/css.css
+++ b/resources/css.css
@@ -6,3 +6,6 @@ p {
     flex-wrap: wrap;
     word-wrap: break-word;
 }
+.row{
+    max-width: 100vw;
+}
